added complete site

--- a/index.html
+++ b/index.html
@@ -15,7 +15,18 @@
 <body>
     <!-- header start -->
     <header>
-
+        <nav class="nav-bar">
+            <div class="half-width">
+                <img src="images/icons/logo.png" alt="">
+                <h1>Idea</h1>
+            </div>
+            <div class="half-width">
+                <a href="">Home</a>
+                <a href="">About</a>
+                <a href="">Works</a>
+                <img src="images/icons/profile.png" alt="">
+            </div>
+        </nav>
     </header>
     <!-- header end -->
     <main>
